packages/smtc_windows/lib/src/bridge_generated.io.dart


  late final _wire_smtc_update_repeat_modePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer, ffi.Pointer<wire_uint_8_list>)>>('wire_smtc_update_repeat_mode');
  late final _wire_smtc_update_repeat_mode = _wire_smtc_update_repeat_modePtr.asFunction<void Function(int, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer, ffi.Pointer<wire_uint_8_list>)>();

  void wire_smtc_disable_smtc(
    int port_,
    wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer media_player,
  ) {
    return _wire_smtc_disable_smtc(
      port_,
      media_player,
    );
  }

  late final _wire_smtc_disable_smtcPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>>('wire_smtc_disable_smtc');
  late final _wire_smtc_disable_smtc = _wire_smtc_disable_smtcPtr.asFunction<void Function(int, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>();

  void wire_smtc_button_press_event(
    int port_,
    wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer media_player,
  ) {
    return _wire_smtc_button_press_event(
      port_,
      media_player,
    );
  }

  late final _wire_smtc_button_press_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>>('wire_smtc_button_press_event');
  late final _wire_smtc_button_press_event = _wire_smtc_button_press_eventPtr.asFunction<void Function(int, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>();

  void wire_smtc_position_change_request_event(
    int port_,
    wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer media_player,
  ) {
    return _wire_smtc_position_change_request_event(
      port_,
      media_player,
    );
  }

  late final _wire_smtc_position_change_request_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>>('wire_smtc_position_change_request_event');
  late final _wire_smtc_position_change_request_event = _wire_smtc_position_change_request_eventPtr.asFunction<void Function(int, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>();

  void wire_smtc_shuffle_request_event(
    int port_,
    wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer media_player,
  ) {
    return _wire_smtc_shuffle_request_event(
      port_,
      media_player,
    );
  }

  late final _wire_smtc_shuffle_request_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>>('wire_smtc_shuffle_request_event');
  late final _wire_smtc_shuffle_request_event = _wire_smtc_shuffle_request_eventPtr.asFunction<void Function(int, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>();

  void wire_smtc_repeat_mode_request_event(
    int port_,
    wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer media_player,
  ) {
    return _wire_smtc_repeat_mode_request_event(
      port_,
      media_player,
    );
  }

  late final _wire_smtc_repeat_mode_request_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>>('wire_smtc_repeat_mode_request_event');
  late final _wire_smtc_repeat_mode_request_event = _wire_smtc_repeat_mode_request_eventPtr.asFunction<void Function(int, wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer)>();

  void wire_initialize_media_player(
    int port_,
    ffi.Pointer<wire_SMTCConfig> config,
    ffi.Pointer<wire_PlaybackTimeline> timeline,
  ) {
    return _wire_initialize_media_player(
      port_,
      config,
      timeline,
    );
  }

  late final _wire_initialize_media_playerPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SMTCConfig>, ffi.Pointer<wire_PlaybackTimeline>)>>('wire_initialize_media_player');
  late final _wire_initialize_media_player = _wire_initialize_media_playerPtr.asFunction<void Function(int, ffi.Pointer<wire_SMTCConfig>, ffi.Pointer<wire_PlaybackTimeline>)>();

  void wire_update_config(
    int port_,
    ffi.Pointer<wire_SMTCConfig> config,
  ) {
    return _wire_update_config(
      port_,
      config,
    );
  }

  late final _wire_update_configPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SMTCConfig>)>>('wire_update_config');
  late final _wire_update_config = _wire_update_configPtr.asFunction<void Function(int, ffi.Pointer<wire_SMTCConfig>)>();

  void wire_update_metadata(
    int port_,
    ffi.Pointer<wire_MusicMetadata> metadata,
  ) {
    return _wire_update_metadata(
      port_,
      metadata,
    );
  }

  late final _wire_update_metadataPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_MusicMetadata>)>>('wire_update_metadata');
  late final _wire_update_metadata = _wire_update_metadataPtr.asFunction<void Function(int, ffi.Pointer<wire_MusicMetadata>)>();

  void wire_update_timeline(
    int port_,
    ffi.Pointer<wire_PlaybackTimeline> timeline,
  ) {
    return _wire_update_timeline(
      port_,
      timeline,
    );
  }

  late final _wire_update_timelinePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PlaybackTimeline>)>>('wire_update_timeline');
  late final _wire_update_timeline = _wire_update_timelinePtr.asFunction<void Function(int, ffi.Pointer<wire_PlaybackTimeline>)>();

  void wire_update_playback_status(
    int port_,
    int status,
  ) {
    return _wire_update_playback_status(
      port_,
      status,
    );
  }

  late final _wire_update_playback_statusPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>('wire_update_playback_status');
  late final _wire_update_playback_status = _wire_update_playback_statusPtr.asFunction<void Function(int, int)>();

  void wire_update_shuffle(
    int port_,
    bool shuffle,
  ) {
    return _wire_update_shuffle(
      port_,
      shuffle,
    );
  }

  late final _wire_update_shufflePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Bool)>>('wire_update_shuffle');
  late final _wire_update_shuffle = _wire_update_shufflePtr.asFunction<void Function(int, bool)>();

  void wire_update_repeat_mode(
    int port_,
    ffi.Pointer<wire_uint_8_list> repeat_mode,
  ) {
    return _wire_update_repeat_mode(
      port_,
      repeat_mode,
    );
  }

  late final _wire_update_repeat_modePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>('wire_update_repeat_mode');
  late final _wire_update_repeat_mode = _wire_update_repeat_modePtr.asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_disable_smtc(
    int port_,
  ) {
    return _wire_disable_smtc(
      port_,
    );
  }

  late final _wire_disable_smtcPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('wire_disable_smtc');
  late final _wire_disable_smtc = _wire_disable_smtcPtr.asFunction<void Function(int)>();

  void wire_button_press_event(
    int port_,
  ) {
    return _wire_button_press_event(
      port_,
    );
  }

  late final _wire_button_press_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('wire_button_press_event');
  late final _wire_button_press_event = _wire_button_press_eventPtr.asFunction<void Function(int)>();

  void wire_position_change_request_event(
    int port_,
  ) {
    return _wire_position_change_request_event(
      port_,
    );
  }

  late final _wire_position_change_request_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('wire_position_change_request_event');
  late final _wire_position_change_request_event = _wire_position_change_request_eventPtr.asFunction<void Function(int)>();

  void wire_shuffle_request_event(
    int port_,
  ) {
    return _wire_shuffle_request_event(
      port_,
    );
  }

  late final _wire_shuffle_request_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('wire_shuffle_request_event');
  late final _wire_shuffle_request_event = _wire_shuffle_request_eventPtr.asFunction<void Function(int)>();

  void wire_repeat_mode_request_event(
    int port_,
  ) {
    return _wire_repeat_mode_request_event(
      port_,
    );
  }

  late final _wire_repeat_mode_request_eventPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('wire_repeat_mode_request_event');
  late final _wire_repeat_mode_request_event = _wire_repeat_mode_request_eventPtr.asFunction<void Function(int)>();

  wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer new_StdSyncMutexWindowsMediaPlaybackMediaPlayer() {
    return _new_StdSyncMutexWindowsMediaPlaybackMediaPlayer();
  }

  late final _new_StdSyncMutexWindowsMediaPlaybackMediaPlayerPtr = _lookup<ffi.NativeFunction<wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer Function()>>('new_StdSyncMutexWindowsMediaPlaybackMediaPlayer');
  late final _new_StdSyncMutexWindowsMediaPlaybackMediaPlayer = _new_StdSyncMutexWindowsMediaPlaybackMediaPlayerPtr.asFunction<wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer Function()>();

  ffi.Pointer<ffi.Int64> new_box_autoadd_i64_0(
    int value,
  ) {
    return _new_box_autoadd_i64_0(
      value,
    );
  }

  late final _new_box_autoadd_i64_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int64> Function(ffi.Int64)>>('new_box_autoadd_i64_0');
  late final _new_box_autoadd_i64_0 = _new_box_autoadd_i64_0Ptr.asFunction<ffi.Pointer<ffi.Int64> Function(int)>();

  ffi.Pointer<wire_MusicMetadata> new_box_autoadd_music_metadata_0() {
    return _new_box_autoadd_music_metadata_0();
  }

  late final _new_box_autoadd_music_metadata_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_MusicMetadata> Function()>>('new_box_autoadd_music_metadata_0');
  late final _new_box_autoadd_music_metadata_0 = _new_box_autoadd_music_metadata_0Ptr.asFunction<ffi.Pointer<wire_MusicMetadata> Function()>();

  ffi.Pointer<wire_PlaybackTimeline> new_box_autoadd_playback_timeline_0() {
    return _new_box_autoadd_playback_timeline_0();
  }

  late final _new_box_autoadd_playback_timeline_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PlaybackTimeline> Function()>>('new_box_autoadd_playback_timeline_0');
  late final _new_box_autoadd_playback_timeline_0 = _new_box_autoadd_playback_timeline_0Ptr.asFunction<ffi.Pointer<wire_PlaybackTimeline> Function()>();

  ffi.Pointer<wire_SMTCConfig> new_box_autoadd_smtc_config_0() {
    return _new_box_autoadd_smtc_config_0();
  }

  late final _new_box_autoadd_smtc_config_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_SMTCConfig> Function()>>('new_box_autoadd_smtc_config_0');
  late final _new_box_autoadd_smtc_config_0 = _new_box_autoadd_smtc_config_0Ptr.asFunction<ffi.Pointer<wire_SMTCConfig> Function()>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_uint_8_list> Function(ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr.asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  void drop_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer(
      ptr,
    );
  }

  late final _drop_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayerPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>('drop_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer');
  late final _drop_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer = _drop_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayerPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer(
      ptr,
    );
  }
